tests/base/parser/bad/cmodule-version-number-contract-name-with.scilla
scilla_version 0
contract Test

(* missing immutable fields declaration *)
transition nothing ()
end
